# cap2root

./: .gitignore  CMakeLists.txt  README.md  TreeData.h  convert_all.sh  eventProto.capnp  final_comprehensive_test.sh
src/: CapnpReader.cpp  CapnpReader.h  RootWriter.cpp  RootWriter.h  capdump.cpp  check_positions.cpp  main.cpp  test_correct_format.cpp  test_file_structure.cpp  test_plain_data.cpp
tests/: test_main.cpp  test_reader.cpp  test_writer.cpp
